# ESE5190-Final-Project

./: CMakeLists.txt  README.md  main.c
lib/: draw.c  draw.h  lsm6ds3.c  lsm6ds3.h  pio_i2c.c  st7735.c  st7735.h
